# ai-film-pipeline

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  最终提示词_示例_信封.md
agents/: README.md  registry.json
film_pipeline/: __init__.py  __main__.py  cli.py  paths.py
film_pipeline/orchestrator/: __init__.py  brief.py  orchestrator.py  pipeline.py  task_ticket.py
film_pipeline/runtime/: __init__.py  agent_runner.py  clip_profile.py  critic_checks.py  dialogue_passthrough.py  knowledge.py  knowledge_updater.py  llm.py  offline_stubs.py  package_prompt_writer.py  performance.py  prompt_compiler.py  prompt_translate.py  prompt_writer.py  prompt_writer_agent.py  shot_locale.py  three_view.py  timing.py  validate.py
knowledge/: README.md
knowledge/ai/: README.md
knowledge/camera/: CATALOG_README.md  emotion_move_index.json  emotion_to_camera.json  emotion_to_camera_from_catalog.json  lens_language.json  moves.json  moves_catalog.json  moves_from_catalog.json  shot_sizes.json
knowledge/continuity/: axis.md
knowledge/dialogue/: rules.md
knowledge/directing/: shot_syntax.md
knowledge/exemplars/: betrayal_reveal_push_in.json
schemas/: film_bible.schema.json
scripts/: analyze_cli_case.py  bootstrap_check.py  daily_knowledge_update.py  dump_prompts_en.py  finish_ananke_full_rerun.py  import_camera_xlsx.py  install_daily_knowledge_task.ps1  make_threeview_case.py  patch_dialogue_into_prompts.py  print_case_prompts.py  rebuild_prompts_clean.py  rebuild_prompts_from_linked.py  run_ananke_shenmou_v2.py  run_deep_dive_case.py  show_final_prompts.py  validate_knowledge_dual.py
tests/: test_dialogue_passthrough.py  test_final_prompts_export.py  test_knowledge_dual.py  test_pipeline_dry_run.py  test_prompt_translate.py  test_prompt_writer.py  test_prompt_writer_agent.py  test_shot_locale.py
(+78 files in other folders)
