[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-film-pipeline"
version = "0.1.0"
description = "Multi-agent pipeline: script → dialogue → shots → look → cinematography → generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI Film Pipeline Contributors" }]
keywords = ["ai", "film", "multi-agent", "cinematography", "screenplay"]
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "openai>=1.40",
  "rich>=13.7",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
film-pipeline = "film_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["film_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
